--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,8 +5,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Process Tracer</title>
-    <!-- Link to our generated CSS file -->
     <link href="/css/style.css" rel="stylesheet" />
+    <style>
+      /* Add some specific styles for our D3 chart */
+      .gantt-chart-container {
+        overflow-x: auto;
+      }
+      .gantt-chart .bar {
+        fill: #2563eb;
+        stroke: #1d4ed8;
+      }
+      .gantt-chart .bar-label {
+        fill: #e5e7eb;
+        font-size: 12px;
+      }
+      .gantt-chart .axis path,
+      .gantt-chart .axis line {
+        stroke: #4b5563;
+      }
+      .gantt-chart .axis text {
+        fill: #9ca3af;
+      }
+    </style>
   </head>
   <body class="bg-gray-900 text-gray-200 font-sans p-4 sm:p-8">
     <div class="max-w-7xl mx-auto">
@@ -35,8 +55,17 @@
       </div>
 
       <div
-        class="bg-gray-800 border border-gray-700 rounded-lg p-4 shadow-md min-h-[60vh]"
+        class="bg-gray-800 border border-gray-700 rounded-lg p-4 shadow-md mb-6"
       >
+        <h2 class="text-xl font-semibold mb-4">Process Timeline</h2>
+        <!-- D3 will draw into this SVG container -->
+        <div class="gantt-chart-container">
+          <svg id="gantt-chart"></svg>
+        </div>
+      </div>
+
+      <div class="bg-gray-800 border border-gray-700 rounded-lg p-4 shadow-md">
+        <h2 class="text-xl font-semibold mb-4">Raw JSON Data</h2>
         <pre
           id="json-output"
           class="text-sm font-mono whitespace-pre-wrap break-words"
@@ -46,8 +75,9 @@ Waiting for data...</pre
       </div>
     </div>
 
-    <!-- Link to Socket.IO and our new JS file -->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/main.js" defer></script>
+    <script src="/libs/d3/d3.min.js"></script>
+    <script src="/js/ganttChart.js"></script>
+    <script src="/js/app.js" defer></script>
   </body>
 </html>
