--- a/server/public/index.html
+++ b/server/public/index.html
@@ -26,6 +26,20 @@
       .gantt-chart .axis text {
         fill: #9ca3af;
       }
+
+      /* Styles for the tooltip */
+      .gantt-tooltip {
+        position: absolute;
+        text-align: left;
+        padding: 8px;
+        font: 12px sans-serif;
+        background: #2d3748;
+        border: 1px solid #4a5568;
+        border-radius: 8px;
+        pointer-events: none; /* Important so it doesn't block mouse events */
+        opacity: 0;
+        transition: opacity 0.2s;
+      }
     </style>
   </head>
   <body class="bg-gray-900 text-gray-200 font-sans p-4 sm:p-8">
@@ -57,8 +71,16 @@
       <div
         class="bg-gray-800 border border-gray-700 rounded-lg p-4 shadow-md mb-6"
       >
-        <h2 class="text-xl font-semibold mb-4">Process Timeline</h2>
-        <!-- D3 will draw into this SVG container -->
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="text-xl font-semibold">Process Timeline</h2>
+          <!-- NEW: Expand button, hidden by default -->
+          <button
+            id="expand-chart-btn"
+            class="hidden px-4 py-1 bg-gray-600 hover:bg-gray-500 rounded-md text-sm"
+          >
+            Show Full Chart
+          </button>
+        </div>
         <div class="gantt-chart-container">
           <svg id="gantt-chart"></svg>
         </div>
@@ -74,6 +96,9 @@ Waiting for data...</pre
         >
       </div>
     </div>
+
+    <!-- Tooltip div at the end of the body -->
+    <div id="gantt-tooltip" class="gantt-tooltip"></div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/libs/d3/d3.min.js"></script>
